# config/routes.rb
@@ -7,8 +7,10 @@ Rails.application.routes.draw do
   # Can be used by load balancers and uptime monitors to verify that the app is live.
   get 'up' => 'rails/health#show', as: :rails_health_check
 
-  resources :products, only: %i[index show]
   resources :carts, only: %i[index show]
+
+  resources :products, only: %i[index show]
+  post '/products/:id/create_promotion' => 'products#create_promotion'
 
   # Render dynamic PWA files from app/views/pwa/* (remember to link manifest in application.html.erb)
   # get "manifest" => "rails/pwa#manifest", as: :pwa_manifest
